<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.SangekiAndroid.Display"
    tools:context=".fragment.KifuDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="@dimen/footer_height">

            <TextView
                style="@style/Css.KifuDetail.Title"
                android:layout_marginTop="0dp"
                android:text="@string/rule"/>

            <TextView
                style="@style/Css.KifuDetail.SubTitle"
                android:text="@string/ruleY"/>
            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/ruleY_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap" />

            <TextView
                style="@style/Css.KifuDetail.SubTitle"
                android:text="@string/ruleX1"/>
            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/ruleX1_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:flexWrap="wrap" />

            <TextView
                android:id="@+id/ruleX2"
                style="@style/Css.KifuDetail.SubTitle"
                android:text="@string/ruleX2"/>
            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/ruleX2_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:flexWrap="wrap" />

            <TextView
                style="@style/Css.KifuDetail.Title"
                android:text="@string/incident"/>
            <LinearLayout
                android:id="@+id/incident_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <TextView
                style="@style/Css.KifuDetail.Title"
                android:text="@string/character"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <GridLayout
                    android:id="@+id/character_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </HorizontalScrollView>
            <Button
                android:id="@+id/add_character"
                style="@style/Css.Base.Button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/add_character"/>

            <TextView
                style="@style/Css.KifuDetail.Title"
                android:text="@string/action_cards"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/kifu_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>