<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.SangekiAndroid.Display"
    tools:context=".fragment.TopFragment">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer_text"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/top_title"
                style="@style/Css.TopFragment.Title"
                android:textSize="28sp"
                android:textAlignment="center"
                android:text="@string/top_page_title"/>

            <TextView
                android:id="@+id/top_note"
                style="@style/Css.TopFragment.Text"
                android:text="@string/top_page_note"/>

            <TextView
                android:id="@+id/scenario_list_title"
                style="@style/Css.TopFragment.Title"
                android:text="@string/scenario_list"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/scenario_list_image"
                style="@style/Css.TopFragment.Image"
                android:src="@drawable/kyakuhonka" />

            <TextView
                android:id="@+id/scenario_list_note"
                style="@style/Css.TopFragment.Note"
                android:text="@string/scenario_note"/>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/footer_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="44dp"
        android:textSize="12sp"
        android:textColor="@color/link"
        android:text="@string/credit" />
</androidx.constraintlayout.widget.ConstraintLayout>