<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.SangekiAndroid.Display"
    tools:context=".fragment.KifuStandbyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/game_start_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <GridLayout
                android:id="@+id/summary_info_wrapper"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">

                <TextView
                    style="@style/Css.Base.TextView"
                    android:text="@string/tragedy_set"/>

                <Spinner
                    android:id="@+id/select_tragedy_set"
                    style="@style/Css.KifuStandby.Spinner"
                    android:layout_marginTop="0dp"/>

                <TextView
                    style="@style/Css.Base.TextView"
                    android:layout_marginTop="16dp"
                    android:text="@string/loop_count"/>

                <Spinner
                    android:id="@+id/loop_count"
                    style="@style/Css.KifuStandby.Spinner"/>

                <TextView
                    style="@style/Css.Base.TextView"
                    android:layout_marginTop="16dp"
                    android:text="@string/day_count"/>

                <Spinner
                    android:id="@+id/day_count"
                    style="@style/Css.KifuStandby.Spinner"/>
            </GridLayout>

            <TextView
                android:id="@+id/special_rule_label"
                app:layout_constraintTop_toBottomOf="@id/summary_info_wrapper"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/Css.KifuStandby.Title"
                android:text="@string/special_rule" />

            <EditText
                android:id="@+id/special_rule"
                app:layout_constraintTop_toBottomOf="@id/special_rule_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:padding="8dp"/>

            <LinearLayout
                android:id="@+id/incident_list_wrapper"
                app:layout_constraintTop_toBottomOf="@id/special_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    style="@style/Css.KifuStandby.Title"
                    android:text="@string/incident_list" />

                <LinearLayout
                    android:id="@+id/incident_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/game_start_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        style="@style/Css.Base.Button"
        android:text="@string/game_start" />
</androidx.constraintlayout.widget.ConstraintLayout>
